--- a/App/src/main/res/values/colors.xml
+++ b/App/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="olive">#718371</color>
 </resources>
