--- a/App/src/main/res/layout/fragment_home.xml
+++ b/App/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
@@ -26,11 +26,14 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
                 android:textStyle="bold"/>
-            <include layout="@layout/category_item"
+
+            <include
                 android:id="@+id/drink1"
-                android:layout_marginVertical="5dp"
+                layout="@layout/category_item"
                 android:layout_width="match_parent"
-                android:layout_height="72dp" />
+                android:layout_height="72dp"
+                android:layout_marginVertical="5dp" />
+
             <include layout="@layout/category_item"
                 android:id="@+id/drink2"
                 android:layout_marginVertical="5dp"
